--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Info2180-Lab6</title>
     <link rel="stylesheet" href="style.css" />
     <script src="app.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main>
