Able to lookup any superhero

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
         />
         <br />
       </div>
-      <div id="result" class="results"></div>
+
+      <div class="result-area">
+        <h2>RESULT</h2>
+        <hr />
+        <div id="result" class="results"></div>
+      </div>
     </main>
   </body>
 </html>
