--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
   </head>
   <body>
     <main>
-      <h1 class="title">AVENGERS CHARACTER SEARCH</h1>
-      <div class="search-area">
-        <form action="superheroes.php" method="GET">
+      <section class="main-content">
+        <h1 class="title">AVENGERS CHARACTER SEARCH</h1>
+        <div class="search-area">
+          <form action="superheroes.php" method="GET">
+            <input
+              type="text"
+              id="txtBox"
+              name="input_value"
+              placeholder="e.g Captain America or Steve Rogers"
+            />
+          </form>
           <input
-            type="text"
-            id="txtBox"
-            name="input_value"
-            placeholder="e.g Captain America or Steve Rogers"
+            type="submit"
+            id="btnSearch"
+            name="submit"
+            value="Search"
+            class="btn btn-primary"
           />
-        </form>
-        <input
-          type="submit"
-          id="btnSearch"
-          name="submit"
-          value="Search"
-          class="btn btn-primary"
-        />
-        <br />
-      </div>
+          <br />
+        </div>
 
-      <div class="result-area">
-        <h2>RESULT</h2>
-        <hr />
-        <div id="result" class="results"></div>
-      </div>
+        <div class="result-area">
+          <h2>RESULT</h2>
+          <hr />
+          <div id="result" class="results"></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
